--- a/QRCity/app/build.gradle
+++ b/QRCity/app/build.gradle
@@ -1,3 +1,9 @@
+/**
+ *  - code-scanner Dependency
+ *      -> GitHub repository link: https://github.com/yuriy-budiyev/code-scanner
+ *      -> Authors: Yuriy Budiyev et al.
+ */
+
 plugins {
     id 'com.android.application'
 }
@@ -26,14 +32,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment:2.4.1'
+    implementation 'androidx.navigation:navigation-ui:2.4.1'
+    implementation 'androidx.navigation:navigation-runtime:2.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
 }
