--- a/QRCity/app/build.gradle
+++ b/QRCity/app/build.gradle
@@ -6,6 +6,7 @@
 
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -45,8 +46,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'androidx.navigation:navigation-runtime:2.4.1'
+    implementation 'com.google.firebase:firebase-firestore:24.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
 }
