--- a/QRCity/app/build.gradle
+++ b/QRCity/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation "androidx.fragment:fragment:1.5.5"
 
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
