--- a/QRCity/app/src/main/AndroidManifest.xml
+++ b/QRCity/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QRCity"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCLVSFs7o_UHxU5hD-EEKAl1bti32fMVdY"></meta-data>
         <activity
             android:name=".MainActivity"
             android:exported="true"
