--- a/QRCity/app/build.gradle
+++ b/QRCity/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     implementation "androidx.fragment:fragment:1.5.5"
 
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+
+    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation "androidx.test:rules:1.5.0"
+    androidTestImplementation "com.jayway.android.robotium:robotium-solo:5.2.1"
 }
