--- a/QRCity/app/build.gradle
+++ b/QRCity/app/build.gradle
@@ -7,6 +7,9 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+
 }
 
 android {
@@ -20,7 +23,9 @@ android {
         versionCode 1
         versionName "1.0"
 
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -44,12 +49,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.4.1'
-    implementation 'androidx.navigation:navigation-ui:2.4.1'
-    implementation 'androidx.navigation:navigation-runtime:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'androidx.navigation:navigation-runtime:2.5.3'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation 'com.google.firebase:firebase-firestore:24.1.0'
-    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    implementation 'com.google.firebase:firebase-firestore:24.4.5'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
@@ -57,8 +62,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "androidx.activity:activity:1.6.1"
-    implementation "androidx.fragment:fragment:1.5.5"
+    implementation "androidx.activity:activity:1.7.0"
+    implementation "androidx.fragment:fragment:1.5.6"
 
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
 }
