--- a/QRCity/app/src/main/AndroidManifest.xml
+++ b/QRCity/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MapsActivity" />
-        <activity android:name=".ThisUserListViewActivity" />
+        <activity android:name=".CodeListview" />
     </application>
 
 </manifest>
