Finished User Stats view
- Changes are not permanent
- Need Database completed before changes can be permanent

--- a/QRCity/app/src/main/AndroidManifest.xml
+++ b/QRCity/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".map.MapsActivity" />
+        <activity android:name=".qr.UserStatisticsView" />
         <activity android:name=".qr.CodeListview" />
     </application>
 
