--- a/QRCity/app/src/main/AndroidManifest.xml
+++ b/QRCity/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.QRCity"
+        android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -37,6 +38,7 @@
         </activity>
         <activity android:name=".map.MapsActivity" />
         <activity android:name=".qr.CodeListview" />
+        <activity android:name=".user.Userprofileactivity"/>
     </application>
 
 </manifest>
